--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.example.ecommerce</groupId>
 	<artifactId>ProyectoFinalJavaEdisonArauco</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>PreEntrega2EdisonArauco</name>
+	<name>ProyectoFinalJavaEdisonArauco</name>
 	<description>Proyecto ecommerce java spring coderhouse</description>
 	<url/>
 	<licenses>
